# CatalystSVM

./: Cargo.toml  LICENSE  README.md  justfile
crates/batch-policy/: Cargo.toml
crates/batch-policy/src/: lib.rs
crates/benchmark-cli/: Cargo.toml
crates/benchmark-cli/src/: engine.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: clock.rs  errors.rs  lib.rs  merkle.rs  metrics.rs  types.rs
crates/execution-engine/: Cargo.toml
crates/execution-engine/src/: lib.rs
crates/ingress/: Cargo.toml
crates/ingress/src/: lib.rs
crates/sp1-program/: Cargo.toml
crates/sp1-program/elf/: riscv32im-succinct-zkvm-elf
crates/sp1-program/src/: main.rs
crates/sp1-prover/: Cargo.toml  build.rs
crates/sp1-prover/src/: lib.rs
crates/sp1-verifier/: Cargo.toml
crates/sp1-verifier/src/: lib.rs
crates/trace-builder/: Cargo.toml
crates/trace-builder/src/: lib.rs
docs/: output.md  presentation.pptx
examples/: README.md
examples/client/: Cargo.toml
examples/client/src/: main.rs
examples/validator/: Cargo.toml
examples/validator/src/: main.rs
examples/verifier-node/: Cargo.toml
examples/verifier-node/src/: main.rs
onchain/catalyst_batcher/: Anchor.toml
onchain/catalyst_batcher/programs/catalyst_batcher/: Cargo.toml
onchain/catalyst_batcher/programs/catalyst_batcher/src/: lib.rs
onchain/catalyst_batcher/tests/: catalyst_batcher.ts
