[package]
name = "catalyst-sp1-verifier"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SP1 verifier for CatalystSVM batch execution proofs"

[dependencies]
catalyst-common = { path = "../common" }
sp1-sdk = { version = "6.3", features = ["blocking"] }
bincode = "1.3"
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
