[package]
name = "catalyst-client"
version = "0.1.0"
edition = "2024"
description = "CatalystSVM client - submit transactions and query proofs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
